@@ -2,6 +2,8 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.0.8  --> 1.0.X  :
+		- added some more mp3 settings (not finished).
+		- disable allow message_file_name if set to "".
 		- fixed a cleanup bug when zipfile integrity failed.
 		- added support for hiding affils.
 		- maziah fixed nfs.zst themefile.
